<resources>
    <string name="app_name">cardie</string>
    <string name="know_kenya">KNOW KENYA</string>
    <string name="play">PLAY</string>
    <string name="this_is_the_text_output">This is the text output</string>
    <string name="click_the_play_button_below_to_start_the_game">Click the play button below to start the game. The bottom end button gives the game instructions and other relevant contents</string>
    <string name="image_logo">Image Logo</string>
    <string name="title_activity_sidebar">sidebar</string>

</resources>