<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/origin">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/lead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:fontFamily="serif"
            android:lineSpacingExtra="8sp"
            android:text="@string/know_kenya"
            android:textColor="#FFFFFF"
            android:textSize="40sp"
            android:textStyle="bold"
            android:typeface="monospace"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <Button
            android:id="@+id/trigger"
            style="@android:style/Widget.Material.Button.Borderless"
            android:layout_width="179dp"
            android:layout_height="86dp"
            android:layout_marginBottom="88dp"
            android:background="#FFEB3B"
            android:text="@string/play"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:targetApi="lollipop" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            app:backgroundTint="#FFC107"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.915"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/trigger"
            app:layout_constraintVertical_bias="0.75"
            app:srcCompat="@android:drawable/ic_search_category_default" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="168dp"
            android:layout_height="133dp"
            android:layout_marginTop="128dp"
            android:contentDescription="@string/image_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/kenya" />

        <TextView
            android:id="@+id/output"
            android:layout_width="345dp"
            android:layout_height="154dp"
            android:background="#00000000"
            android:contentDescription="@string/this_is_the_text_output"
            android:fontFamily="monospace"
            android:text="@string/click_the_play_button_below_to_start_the_game"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@+id/trigger"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lead"
            app:layout_constraintVertical_bias="0.634" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>